fix search pagination position

--- a/resources/views/ItemList/ItemListView.twig
+++ b/resources/views/ItemList/ItemListView.twig
@@ -35,7 +35,7 @@
         </div>
 
         {% if ceresConfig.pagination.position in ['top', 'top_bottom'] %}
-            <div class="list-controls m-b-3">
+            <div class="list-controls m-b-3 row">
                 <div class="col-xs-12">
                     <pagination template="#vue-pagination"></pagination>
                 </div>
@@ -57,7 +57,7 @@
         </div>
 
         {% if ceresConfig.pagination.position in ['bottom', 'top_bottom'] %}
-            <div class="list-controls m-b-3">
+            <div class="list-controls m-b-3 row">
                 <div class="col-xs-12">
                     <pagination template="#vue-pagination"></pagination>
                 </div>
