--- a/resources/views/Widgets/Grid/ThreeColumnWidget.twig
+++ b/resources/views/Widgets/Grid/ThreeColumnWidget.twig
@@ -1,40 +1,40 @@
 {% if widgetSettings.layout == "default" %}
     <!-- 3 Spalten identisch: -->
     <div class="row">
-        <div class="col-xs-4" data-builder-container>DROPZONE</div>
-        <div class="col-xs-4" data-builder-container>DROPZONE</div>
-        <div class="col-xs-4" data-builder-container>DROPZONE</div>
+        <div class="col-xs-4 nested-widget"></div>
+        <div class="col-xs-4 nested-widget"></div>
+        <div class="col-xs-4 nested-widget"></div>
     </div>
 {% elseif widgetSettings.layout == "a" %}
     <!-- 3 Spalten links groß: -->
     <div class="row">
-        <div class="col-xs-6" data-builder-container>DROPZONE</div>
-        <div class="col-xs-3" data-builder-container>DROPZONE</div>
-        <div class="col-xs-3" data-builder-container>DROPZONE</div>
+        <div class="col-xs-6 nested-widget"></div>
+        <div class="col-xs-3 nested-widget"></div>
+        <div class="col-xs-3 nested-widget"></div>
     </div>
 {% elseif widgetSettings.layout == "b" %}
     <!-- 3 Spalten mitte groß: -->
     <div class="row">
-        <div class="col-xs-3" data-builder-container>DROPZONE</div>
-        <div class="col-xs-6" data-builder-container>DROPZONE</div>
-        <div class="col-xs-3" data-builder-container>DROPZONE</div>
+        <div class="col-xs-3 nested-widget"></div>
+        <div class="col-xs-6 nested-widget"></div>
+        <div class="col-xs-3 nested-widget"></div>
     </div>
 {% elseif widgetSettings.layout == "c" %}
     <!-- 3 Spalten rechts groß: -->
     <div class="row">
-        <div class="col-xs-3" data-builder-container>DROPZONE</div>
-        <div class="col-xs-3" data-builder-container>DROPZONE</div>
-        <div class="col-xs-6" data-builder-container>DROPZONE</div>
+        <div class="col-xs-3 nested-widget"></div>
+        <div class="col-xs-3 nested-widget"></div>
+        <div class="col-xs-6 nested-widget"></div>
     </div>
 {% elseif widgetSettings.layout == "d" %}
     <!-- 3 Spalten, links eine, rechts 2: -->
     <div class="row">
-        <div class="col-xs-8" data-builder-container>DROPZONE</div>
+        <div class="col-xs-8 nested-widget"></div>
 
         <div class="col-xs-4">
             <div class="row">
-                <div class="col-xs-12" data-builder-container>DROPZONE</div>
-                <div class="col-xs-12" data-builder-container>DROPZONE</div>
+                <div class="col-xs-12 nested-widget"></div>
+                <div class="col-xs-12 nested-widget"></div>
             </div>
         </div>
     </div>
@@ -43,11 +43,11 @@
     <div class="row">
         <div class="col-xs-4">
             <div class="row">
-                <div class="col-xs-12" data-builder-container>DROPZONE</div>
-                <div class="col-xs-12" data-builder-container>DROPZONE</div>
+                <div class="col-xs-12 nested-widget"></div>
+                <div class="col-xs-12 nested-widget"></div>
             </div>
         </div>
 
-        <div class="col-xs-8" data-builder-container>DROPZONE</div>
+        <div class="col-xs-8 nested-widget"></div>
     </div>
 {% endif %}
