--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -6,138 +6,6 @@
 {% set numberOfFeatures = config('Ceres.footer.number_of_features') %}
 {% set topButtonPosition = config('Ceres.footer.to_top_button') %}
 
-<div class="footer" {% if request.get('isContentBuilder') == 1 %} data-builder-container="shop-builder-footer" {% endif %}>
-
-    {% if request.get('isContentBuilder') != 1 %}
-        <div>
-
-            <div class="{% if topButtonPosition == "right" %}back-to-top{% else %}back-to-top-center{% endif %} hidden-sm-down">
-                <i class="fa fa-chevron-up"></i>
-            </div>
-
-            <div class="to-top hidden-md-up" v-scroll-to-top>
-                <i class="fa fa-arrow-up" aria-hidden="true"></i>
-            </div>
-
-            {% if numberOfFeatures > 0 %}
-                <div class="footer-features p-y-1 container-max">
-                    <div class="row">
-                        {% for i in 1..numberOfFeatures %}
-                            <div class="col-xs-12 col-sm-4 text-xs-center">
-                                <i class="fa fa-check text-success" aria-hidden="true"></i>
-                                {{ config('Ceres.footer.store_feature_' ~ i) }}
-                            </div>
-                        {% endfor %}
-                    </div>
-                </div>
-            {% endif %}
-
-            <div class="container-max footer-content">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <div class="footer-services m-t-2">
-                            {% set paymentMethodContent = LayoutContainer.show("Ceres::Homepage.PaymentMethods") %}
-                            {% if paymentMethodContent|trim is not empty %}
-                                <div class="services-payment m-b-1">
-                                    <strong class="services-title">{{ trans("Ceres::Template.orderPaymentMethods") }}</strong>
-                                    {{ paymentMethodContent }}
-                                </div>
-                            {% endif %}
-                            {% set shippingContent = LayoutContainer.show("Ceres::Homepage.Shipping") %}
-                            {% if shippingContent|trim is not empty %}
-                                <div class="services-shipping m-b-1">
-                                    <strong class="services-title">{{ trans("Ceres::Template.generalOrderShippedBy") }}</strong>
-                                    {{ shippingContent }}
-                                </div>
-                            {% endif %}
-                            {% set certifiedContent = LayoutContainer.show("Ceres::Homepage.Certified") %}
-                            {% if certifiedContent|trim is not empty %}
-                                <div class="services-certificate m-b-1">
-                                    <strong class="services-title">{{ trans("Ceres::Template.generalCertifiedBy") }}</strong>
-                                    {{ certifiedContent }}
-                                </div>
-                            {% endif %}
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <hr class="m-y-2">
-                    {% for i in 1..numberOfCols %}
-                        <div class="col-xs-6 col-sm-3 col-lg-2">
-                            <nav class="footer-column m-b-2">
-                                <h2 class="h5">{{ config('Ceres.footer.col_' ~ i ~ '_title') }}</h2>
-                                <ul class="list-unstyled">
-
-                                    {% set footerCategories = config('Ceres.footer.col_' ~ i ~ '_categories') | find("[0-9]+") %}
-                                    {% for catID in footerCategories %}
-
-                                        {% set cat = services.category.get(catID, lang) %}
-
-                                        {% if cat is not null %}
-                                            {% set displayedCategories = displayedCategories | merge([catID]) %}
-                                            <li>
-                                                <a href="{{ services.category.getURL( cat ) }}">
-                                                    {{ cat.details.first.name }}</a>
-                                            </li>
-                                        {% endif %}
-
-                                    {% endfor %}
-
-                                </ul>
-                            </nav>
-                        </div>
-                    {% endfor %}
-                    <hr class="hidden-sm-up m-y-2">
-                    <div class="col-xs-6 col-sm-3">
-                        <div class="footer-column">
-                            {{ LayoutContainer.show("Ceres::Footer.RowOne") }}
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-3">
-                        <div class="footer-column row">
-                            {% set rowTwo = LayoutContainer.show("Ceres::Footer.RowTwo") %}
-
-                            {{ rowTwo }}
-
-                            {% if rowTwo|trim is not empty %}
-                            <div class="col-xs-12 col-sm-6 col-lg-12">
-                                {% else %}
-                                <div class="col-xs-12">
-                                    {% endif %}
-                                    {{ LayoutContainer.show("Ceres::Footer.RowThree") }}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    {% set cat = services.category.get(config('Ceres.global.category.legal_disclosure')) %}
-                    <div class="copyright text-xs-center m-y-1">
-                        <div class="static-link-list">
-                            {% autoescape false %}
-                                <a href="/cancellation-rights">{{ trans("Ceres::Template.generalCancellationRight") }}</a>
-                                {% if config("Ceres.footer.cancellation_use_pdf") == "true" %}
-                                    <a href="{{ config('Ceres.footer.cancellation_pdf_path') }}" target="_blank">{{ trans("Ceres::Template.generalCancellationForm") }}</a>
-                                {% else %}
-                                    <a href="/cancellation-form">{{ trans("Ceres::Template.generalCancellationForm") }}</a>
-                                {% endif %}
-                                <a href="/legal-disclosure">{{ trans("Ceres::Template.generalLegalDisclosure") }}</a>
-                                <a href="/privacy-policy">{{ trans("Ceres::Template.generalPrivacyPolicy") }}</a>
-                                <a href="/gtc">{{ trans("Ceres::Template.generalGtc") }}</a>
-                                {% if config("Ceres.contact.shop_mail") | length > 0 and config("Ceres.contact.shop_mail") != "your@email.com" %}
-                                    <a href="/contact">{{ trans("Ceres::Template.generalContact") }}</a>
-                                {% endif %}
-                            {% endautoescape %}
-                        </div>
-                        <a rel="nofollow" href="https://www.plentymarkets.eu">
-                            <img alt="Plentymarkets GmbH Logo" class="svg plenty-brand" src="{{ plugin_path('Ceres') }}/images/plentymarkets-logo.svg" rel="nofollow">
-                        </a>
-                        <br>
-                        <small>&copy; Copyright {{ "now" | date("Y") }} | {{ trans("Ceres::Template.generalAllRightsReserved") }}</small>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    {% endif %}
+<div class="footer">
+    {{ LayoutContainer.show("Ceres::Footer") }}
 </div>
