--- a/resources/views/PageDesign/Partials/Header/Header.twig
+++ b/resources/views/PageDesign/Partials/Header/Header.twig
@@ -14,7 +14,8 @@
 {% set currencyFormat = config("Ceres.currency.format") %}
 {% set currencyFormatSelect = config("Ceres.currency.format_selection") %}
 
-<header class="top-bar" {% if request.get('isContentBuilder') == 1 %} data-builder-container="shop-builder-header" {% endif %}>
+<header class="top-bar">
+    {{ LayoutContainer.show("Ceres::Header") }}
     {% if request.get('isContentBuilder') != 1 %}
         <div>
             <div class="container-max">
