--- a/resources/views/Customer/Components/Contact/AcceptPrivacyPolicyCheck.twig
+++ b/resources/views/Customer/Components/Contact/AcceptPrivacyPolicyCheck.twig
@@ -1,6 +1,6 @@
 <script type="x/template" id="vue-accept-privacy-policy-check">
     <label class="form-check-label" for="privacy-policy-accept" :class="{ 'error': showError }">
-        <input class="form-check-input" type="checkbox" id="privacy-policy-accept" v-model="compValue" @change="onValueChanged($event.target.checked)">
+        <input class="form-check-input" type="checkbox" id="privacy-policy-accept" :checked="value" @change="onValueChanged($event.target.checked)">
         {% autoescape false %}
             {% set policyContent %}<!--
                 --><a href="/privacy-policy" target="_blank">
