--- a/resources/views/PageDesign/Partials/Head.twig
+++ b/resources/views/PageDesign/Partials/Head.twig
@@ -32,7 +32,7 @@
 {% set performanceLevel = config('Ceres.log.performance.level') %}
 {% set itemName = config('Ceres.item.name') %}
 
-{% if LayoutContainer.show("Ceres::Template.StyleOverwrite") | strip_comments | trim is empty %}
+{% if LayoutContainer.show("Ceres::Template.StyleOverwrite") | trim is empty %}
     <link id="ceres-css" rel="stylesheet" href="{{ plugin_path('Ceres') }}/css/ceres.css">
 {% endif %}
 
