set meta title to page title

--- a/resources/views/Category/Item/CategoryItem.twig
+++ b/resources/views/Category/Item/CategoryItem.twig
@@ -119,7 +119,7 @@
         <link rel=“next“ href=“{{ webstoreConfig.domainSsl }}?{{ query | merge({'page' : currentPage+1 }) | url_encode }}“ />
     {% endif %}
 
-    <title>{{ category.details[0].name }} | {{ ceresConfig.header.companyName }}</title>
+    <title>{% if category.details[0].metaTitle | length > 0 %}{{ category.details[0].metaTitle }}{% else %}{{ category.details[0].name }}{% endif %} | {{ ceresConfig.header.companyName }}</title>
 
     <meta name="description" content="{{ category.details[0].metaDescription }}">
     <meta name="keywords" content="{{ category.details[0].metaKeywords }}">
