--- a/resources/views/Widgets/Grid/FourColumnWidget.twig
+++ b/resources/views/Widgets/Grid/FourColumnWidget.twig
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="col-xs-3 nested-widget"></div>
-    <div class="col-xs-3 nested-widget"></div>
-    <div class="col-xs-3 nested-widget"></div>
-    <div class="col-xs-3 nested-widget"></div>
+    <div class="col-xs-3 nested-widget-container"></div>
+    <div class="col-xs-3 nested-widget-container"></div>
+    <div class="col-xs-3 nested-widget-container"></div>
+    <div class="col-xs-3 nested-widget-container"></div>
 </div>
