--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -22,7 +22,7 @@
                 {% for i in 1..numberOfFeatures %}
                     <div class="col-xs-12 col-sm-4 text-xs-center">
                         <i class="fa fa-check text-success" aria-hidden="true"></i>
-                        {{ config('Ceres.footer.store_feature_' ~ i) }}
+                        {{ trans('Ceres::Template.footerStoreFeature' ~ i) }}
                     </div>
                 {% endfor %}
             </div>
@@ -64,7 +64,7 @@
             {% for i in 1..numberOfCols %}
                 <div class="col-xs-6 col-sm-3 col-lg-2">
                     <nav class="footer-column m-b-2">
-                        <h2 class="h5">{{ config('Ceres.footer.col_' ~ i ~ '_title') }}</h2>
+                        <h2 class="h5">{{ trans('Ceres::Template.footerColumnTitle' ~ i) }}</h2>
                         <ul class="list-unstyled">
 
                             {% set footerCategories = config('Ceres.footer.col_' ~ i ~ '_categories') | find("[0-9]+") %}
