--- a/resources/views/StaticPages/CancellationForm.twig
+++ b/resources/views/StaticPages/CancellationForm.twig
@@ -3,7 +3,7 @@
 {% import "Ceres::PageDesign.Macros.LayoutContainer" as LayoutContainer %}
 
 {% block PartialHead %}
-    <meta name="description" content="{{ config("Ceres.meta."~metaLang~".description_cancel_form") }}">
+    <meta name="description" content="{{ trans('Ceres::Template.cancellationFormMetaDescription') }}">
     <meta name="robots" content="{{ config("Ceres.meta.robots_cancel_form") }}">
     <title class="no-print">{{ trans("Ceres::Template.cancellationFormNoShy") }} | {{ config("Ceres.header.company_name") }}</title>
 {% endblock %}
