--- a/resources/views/StaticPages/CancellationRights.twig
+++ b/resources/views/StaticPages/CancellationRights.twig
@@ -3,7 +3,7 @@
 {% import "Ceres::PageDesign.Macros.LayoutContainer" as LayoutContainer %}
 
 {% block PartialHead %}
-    <meta name="description" content="{{ config("Ceres.meta."~metaLang~".description_cancel_rights") }}">
+    <meta name="description" content="{{ trans('Ceres::Template.cancellationRightsMetaDescription') }}">
     <meta name="robots" content="{{ config("Ceres.meta.robots_cancel_rights") }}">
     <title>{{ trans("Ceres::Template.cancellationRightsNoShy") }} | {{ config("Ceres.header.company_name") }}</title>
 {% endblock %}
