--- a/resources/views/StaticPages/PrivacyPolicy.twig
+++ b/resources/views/StaticPages/PrivacyPolicy.twig
@@ -3,7 +3,7 @@
 {% import "Ceres::PageDesign.Macros.LayoutContainer" as LayoutContainer %}
 
 {% block PartialHead %}
-    <meta name="description" content="{{ config("Ceres.meta."~metaLang~".description_privacy_policy") }}">
+    <meta name="description" content="{{ trans('Ceres::Template.privacyPolicyMetaDescription') }}">
     <meta name="robots" content="{{ config("Ceres.meta.robots_privacy_policy") }}">
     <title>{{ trans("Ceres::Template.privacyPolicyNoShy") }} | {{ config("Ceres.header.company_name") }}</title>
 {% endblock %}
