--- a/resources/views/StaticPages/TermsAndConditions.twig
+++ b/resources/views/StaticPages/TermsAndConditions.twig
@@ -3,7 +3,7 @@
 {% import "Ceres::PageDesign.Macros.LayoutContainer" as LayoutContainer %}
 
 {% block PartialHead %}
-    <meta name="description" content="{{ config("Ceres.meta."~metaLang~".description_terms_and_conditions") }}">
+    <meta name="description" content="{{ trans('Ceres::Template.termsAndConditionsMetaDescription') }}">
     <meta name="robots" content="{{ config("Ceres.meta.robots_terms_and_conditions") }}">
     <title>{{ trans("Ceres::Template.termsAndConditions") }} | {{ config("Ceres.header.company_name") }}</title>
 {% endblock %}
