ADD missing payment status properties

--- a/resources/views/Checkout/OrderDetails.twig
+++ b/resources/views/Checkout/OrderDetails.twig
@@ -71,7 +71,7 @@
                             {% for propertyKey in orderData.order.properties %}
                                 {% if orderData.order.properties[loop.index0].typeId == 4 %}
                                     {% set paymentStatus = entry.order.properties[loop.index0].value %}
-                                    <span class="col-xs-6 col-sm-7" id="payment_state_{{ orderData.order.id }}">{{ trans("Ceres::Template.paymentStatus_" ~ orderData.order.properties[loop.index0].value) }}</span>
+                                    <span class="col-xs-6 col-sm-7" id="payment_state_{{ orderData.order.id }}">{{ trans("Ceres::Template.orderConfirmationPaymentStatus_" ~ orderData.order.properties[loop.index0].value) }}</span>
                                 {% elseif orderData.order.properties[loop.index0].typeId == 3 %}
                                     {% set paymentMethodId = orderData.order.properties[loop.index0].value %}
                                 {% endif %}
