--- a/resources/views/Category/Macros/CategoryTree.twig
+++ b/resources/views/Category/Macros/CategoryTree.twig
@@ -2,7 +2,7 @@
     {% set megaMenuLevels = not config('Ceres.header.megamenu_levels') ? 1 : config('Ceres.header.megamenu_levels') %}
     {% set maxitems = { "1": config('Ceres.header.megamenu_items_stage_1'), "2": config('Ceres.header.megamenu_items_stage_2') ,"3": config('Ceres.header.megamenu_items_stage_3')} %}
     {% set trailingSlash = "" %}
-    {% if config('urlTrailingSlash') == 1 %}
+    {% if config('plenty.system.info.urlTrailingSlash') == 1 %}
         {% set trailingSlash = "/" %}
     {% endif %}
     {% import _self as childlist %}
@@ -33,7 +33,7 @@
     {% set counter = 0 %}
     {% set megaMenuLevels = not config('Ceres.header.megamenu_levels') ? 1 : config('Ceres.header.megamenu_levels') %}
     {% set trailingSlash = "" %}
-    {% if config('urlTrailingSlash') == 1 %}
+    {% if config('plenty.system.info.urlTrailingSlash') == 1 %}
         {% set trailingSlash = "/" %}
     {% endif %}
 
@@ -91,7 +91,7 @@
 
     {% set urlNow = currentScopeUrl %}
     {% set trailingSlash = "" %}
-    {% if config('urlTrailingSlash') == 1 %}
+    {% if config('plenty.system.info.urlTrailingSlash') == 1 %}
         {% set trailingSlash = "/" %}
     {% endif %}
 
