FIX layout container issues

--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -7,5 +7,5 @@
 {% set topButtonPosition = config('Ceres.footer.to_top_button') %}
 
 <div class="footer">
-    {{ LayoutContainer.show("Ceres::Footer") }}
+    {#{{ LayoutContainer.show("Ceres::Footer") }}#}
 </div>
