--- a/resources/views/PageDesign/Partials/Header/Header.twig
+++ b/resources/views/PageDesign/Partials/Header/Header.twig
@@ -15,7 +15,7 @@
 {% set currencyFormatSelect = config("Ceres.currency.format_selection") %}
 
 <header class="top-bar">
-    {{ LayoutContainer.show("Ceres::Header") }}
+    {#{{ LayoutContainer.show("Ceres::Header") }}#}
     {% if request.get('isContentBuilder') != 1 %}
         <div>
             <div class="container-max">
