--- a/resources/views/Customer/Components/Contact/AcceptPrivacyPolicyCheck.twig
+++ b/resources/views/Customer/Components/Contact/AcceptPrivacyPolicyCheck.twig
@@ -4,7 +4,7 @@
         {% autoescape false %}
             {% set policyContent %}<!--
                 --><a href="/privacy-policy" target="_blank">
-                    <span>{{ trans("Ceres::Template.contactPrivacyPolicy") }}</span>
+                    <span>{{ trans("Ceres::Template.contactPrivacyPolicy", {"hyphen": "&shy;"}) }}</span>
                 </a><!--
             -->{% endset %}
 
