--- a/resources/views/StaticPages/CancellationForm.twig
+++ b/resources/views/StaticPages/CancellationForm.twig
@@ -5,7 +5,7 @@
 {% block PartialHead %}
     <meta name="description" content="{{ config("Ceres.meta."~metaLang~".description_cancel_form") }}">
     <meta name="robots" content="{{ config("Ceres.meta.robots_cancel_form") }}">
-    <title class="no-print">{{ trans("Ceres::Template.cancellationFormNoShy") }} | {{ config("Ceres.header.company_name") }}</title>
+    <title class="no-print">{{ trans("Ceres::Template.cancellationForm") }} | {{ config("Ceres.header.company_name") }}</title>
 {% endblock %}
 
 {% block PageBody %}
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col-xs-12 m-b-3">
                 {% autoescape false %}
-                    <h1 class="print-header">{{ trans("Ceres::Template.cancellationForm") }}</h1>
+                    <h1 class="print-header">{{ trans("Ceres::Template.cancellationForm", {"hyphen": "&shy;"}) }}</h1>
                 {% endautoescape %}
 
                 <hr class="m-y-3">
