FIX check for pluginSetId

--- a/resources/views/PageDesign/Partials/Head.twig
+++ b/resources/views/PageDesign/Partials/Head.twig
@@ -33,7 +33,7 @@
 {% set itemName = config('Ceres.item.name') %}
 
 {% if LayoutContainer.show("Ceres::Template.StyleOverwrite") | trim is empty %}
-    {% if config('plugin.setId', null) != null %}
+    {% if config('plugin.setId', null) is not empty %}
         <link rel="stylesheet" href="{{ plugin_path('Ceres') }}/css/ceres.{{ config('plugin.setId') }}.css">
     {% else %}
         <link rel="stylesheet" href="{{ plugin_path('Ceres') }}/css/ceres.css">
