--- a/resources/views/Widgets/Grid/ThreeColumnWidget.twig
+++ b/resources/views/Widgets/Grid/ThreeColumnWidget.twig
@@ -1,37 +1,37 @@
 {% if widgetSettings.layout == "default" %}
     <!-- 3 Spalten identisch: -->
     <div class="row">
-        <div class="col-xs-4 nested-widget-container"></div>
-        <div class="col-xs-4 nested-widget-container"></div>
-        <div class="col-xs-4 nested-widget-container"></div>
+        <div class="col-xs-12 col-md-4 nested-widget-container"></div>
+        <div class="col-xs-12 col-md-4 nested-widget-container"></div>
+        <div class="col-xs-12 col-md-4 nested-widget-container"></div>
     </div>
 {% elseif widgetSettings.layout == "a" %}
     <!-- 3 Spalten links groß: -->
     <div class="row">
-        <div class="col-xs-6 nested-widget-container"></div>
-        <div class="col-xs-3 nested-widget-container"></div>
-        <div class="col-xs-3 nested-widget-container"></div>
+        <div class="col-xs-12 col-md-6 nested-widget-container"></div>
+        <div class="col-xs-12 col-md-3 nested-widget-container"></div>
+        <div class="col-xs-12 col-md-3 nested-widget-container"></div>
     </div>
 {% elseif widgetSettings.layout == "b" %}
     <!-- 3 Spalten mitte groß: -->
     <div class="row">
-        <div class="col-xs-3 nested-widget-container"></div>
-        <div class="col-xs-6 nested-widget-container"></div>
-        <div class="col-xs-3 nested-widget-container"></div>
+        <div class="col-xs-12 col-md-3 nested-widget-container"></div>
+        <div class="col-xs-12 col-md-6 nested-widget-container"></div>
+        <div class="col-xs-12 col-md-3 nested-widget-container"></div>
     </div>
 {% elseif widgetSettings.layout == "c" %}
     <!-- 3 Spalten rechts groß: -->
     <div class="row">
-        <div class="col-xs-3 nested-widget-container"></div>
-        <div class="col-xs-3 nested-widget-container"></div>
-        <div class="col-xs-6 nested-widget-container"></div>
+        <div class="col-xs-12 col-md-3 nested-widget-container"></div>
+        <div class="col-xs-12 col-md-3 nested-widget-container"></div>
+        <div class="col-xs-12 col-md-6 nested-widget-container"></div>
     </div>
 {% elseif widgetSettings.layout == "d" %}
     <!-- 3 Spalten, links eine, rechts 2: -->
     <div class="row">
-        <div class="col-xs-8 nested-widget-container"></div>
+        <div class="col-xs-12 col-md-8 nested-widget-container"></div>
 
-        <div class="col-xs-4">
+        <div class="col-xs-12 col-md-4">
             <div class="row">
                 <div class="col-xs-12 nested-widget-container"></div>
                 <div class="col-xs-12 nested-widget-container"></div>
@@ -41,13 +41,13 @@
 {% elseif widgetSettings.layout == "e" %}
     <!-- 3 Spalten, links 2, rechts eine: -->
     <div class="row">
-        <div class="col-xs-4">
+        <div class="col-xs-12 col-md-4">
             <div class="row">
                 <div class="col-xs-12 nested-widget-container"></div>
                 <div class="col-xs-12 nested-widget-container"></div>
             </div>
         </div>
 
-        <div class="col-xs-8 nested-widget-container"></div>
+        <div class="col-xs-12 col-md-8 nested-widget-container"></div>
     </div>
 {% endif %}
