--- a/resources/scss/Ceres.scss
+++ b/resources/scss/Ceres.scss
@@ -4,7 +4,7 @@
 // ==========================================================================
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome/scss/font-awesome";
-@import "shariff/build/shariff.complete.css";
+@import "shariff/build/shariff.min.css";
 @import "flag-icon-css/sass/flag-icon";
 
 // ==========================================================================
