CHANGE widget translation keys

--- a/resources/views/Widgets/Common/ImageBoxWidget.twig
+++ b/resources/views/Widgets/Common/ImageBoxWidget.twig
@@ -25,8 +25,8 @@
 
 {% if data is empty %}
     {% set data = {
-        name: trans("Ceres::Widget.imageBox_placeholder_name"),
-        imagePath: trans("Ceres::Widget.imageBox_placeholder_image")
+        name: trans("Ceres::Widget.imageBoxPlaceholderName"),
+        imagePath: trans("Ceres::Widget.imageBoxPlaceholderImage")
     } %}
 {% endif %}
 
