--- a/resources/views/Widgets/Common/ItemListWidget.twig
+++ b/resources/views/Widgets/Common/ItemListWidget.twig
@@ -40,7 +40,13 @@
                     </li>
                 {% endfor %}
             {% else %}
-                {% for i in 0..3 %}
+
+                {% set loopEnd = maxItems %}
+                {% if loopEnd > 4 %}
+                    {% set loopEnd = 4 %}
+                {% endif %}
+                
+                {% for i in 1..loopEnd %}
                     <li class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                         {% include "Ceres::Widgets.Common.Partials.CategoryListItemPreview" %}
                     </li>
