--- a/resources/views/Widgets/Grid/ThreeColumnWidget.twig
+++ b/resources/views/Widgets/Grid/ThreeColumnWidget.twig
@@ -1,33 +1,33 @@
 {% if widgetSettings.layout == "default" %}
-    <!-- 3 Spalten identisch: -->
+    {# 3 Spalten identisch: #}
     <div class="row">
         <div class="col-xs-12 col-md-4 nested-widget-container"></div>
         <div class="col-xs-12 col-md-4 nested-widget-container"></div>
         <div class="col-xs-12 col-md-4 nested-widget-container"></div>
     </div>
 {% elseif widgetSettings.layout == "a" %}
-    <!-- 3 Spalten links groß: -->
+    {# 3 Spalten links groß: #}
     <div class="row">
         <div class="col-xs-12 col-md-6 nested-widget-container"></div>
         <div class="col-xs-12 col-md-3 nested-widget-container"></div>
         <div class="col-xs-12 col-md-3 nested-widget-container"></div>
     </div>
 {% elseif widgetSettings.layout == "b" %}
-    <!-- 3 Spalten mitte groß: -->
+    {# 3 Spalten mitte groß: #}
     <div class="row">
         <div class="col-xs-12 col-md-3 nested-widget-container"></div>
         <div class="col-xs-12 col-md-6 nested-widget-container"></div>
         <div class="col-xs-12 col-md-3 nested-widget-container"></div>
     </div>
 {% elseif widgetSettings.layout == "c" %}
-    <!-- 3 Spalten rechts groß: -->
+    {# 3 Spalten rechts groß: #}
     <div class="row">
         <div class="col-xs-12 col-md-3 nested-widget-container"></div>
         <div class="col-xs-12 col-md-3 nested-widget-container"></div>
         <div class="col-xs-12 col-md-6 nested-widget-container"></div>
     </div>
 {% elseif widgetSettings.layout == "d" %}
-    <!-- 3 Spalten, links eine, rechts 2: -->
+    {# 3 Spalten, links eine, rechts 2: #}
     <div class="row">
         <div class="col-xs-12 col-md-8 nested-widget-container"></div>
 
@@ -39,7 +39,7 @@
         </div>
     </div>
 {% elseif widgetSettings.layout == "e" %}
-    <!-- 3 Spalten, links 2, rechts eine: -->
+    {# 3 Spalten, links 2, rechts eine: #}
     <div class="row">
         <div class="col-xs-12 col-md-4">
             <div class="row">
