--- a/resources/views/Widgets/Grid/TwoColumnWidget.twig
+++ b/resources/views/Widgets/Grid/TwoColumnWidget.twig
@@ -1,17 +1,17 @@
 {% if widgetSettings.layout == "default" %}
-    <!-- 2 Spalten identisch: -->
+    {# 2 Spalten identisch: #}
     <div class="row">
         <div class="col-xs-12 col-md-6 nested-widget-container"></div>
         <div class="col-xs-12 col-md-6 nested-widget-container"></div>
     </div>
 {% elseif widgetSettings.layout == "a" %}
-    <!-- 2 Spalten links groß: -->
+    {# 2 Spalten links groß: #}
     <div class="row">
         <div class="col-xs-12 col-md-8 nested-widget-container"></div>
         <div class="col-xs-12 col-md-4 nested-widget-container"></div>
     </div>
 {% elseif widgetSettings.layout == "b" %}
-    <!-- 2 Spalten rechts groß: -->
+    {# 2 Spalten rechts groß: #}
     <div class="row">
         <div class="col-xs-12 col-md-4 nested-widget-container"></div>
         <div class="col-xs-12 col-md-8 nested-widget-container"></div>
